# rust-projects

./: README.md
api-calls/: Cargo.toml
api-calls/src/: main.rs
async-await/: Cargo.toml
async-await/src/: main.rs
basic-auth/: Cargo.toml
basic-auth/src/: main.rs
compress_file/src/: main.rs
csv-reader/: Cargo.toml  sample.csv
csv-reader/src/: main.rs
decompressor/: Cargo.toml
decompressor/src/: main.rs
download-images/: Cargo.toml
download-images/src/: main.rs
extract-links/: Cargo.toml
extract-links/src/: main.rs
firebase-crud/: Cargo.toml
firebase-crud/src/: main.rs
get-request/: Cargo.toml
get-request/src/: main.rs
json-reader/: Cargo.toml  example_1.json
json-reader/src/: fruit.rs  main.rs
rhai-api/: Cargo.toml
rhai-api/src/: add.rhai  main.rs  multiply.rhai
spotify-api/: Cargo.toml
spotify-api/src/: main.rs
write-json/: Cargo.toml  example.json
write-json/src/: main.rs
