[package]
name = "async-await"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version= "0.11.13", features=["blocking","json"]}
tokio = { version = "1.23.0", features = ["full"] }
error-chain = "0.12.4"