[package]
name = "firebase-crud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.6"
serde = "1.0.151"
serde_json = "1.0.91"
firebase-rs = "2.0.5"
tokio = {version="1.23.0",features = ["full"]}